Mis au propre. Prototype pour le moment, tests de CSS en cours et à venir

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@ $breadcrumb-active-color: #343a40;
 @import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css";
 @import "./component-chosen.css";
 @import "~virtual-keyboard/dist/css/keyboard.min.css";
+@import "./requetes.css";
 
 $map-yellow: #d8be00;
 $map-grey: #434343;
