--- a/assets/css/requetes.css
+++ b/assets/css/requetes.css
@@ -1,4 +1,4 @@
-#liste_critere {
+/*#liste_critere {
     margin-left : auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -19,3 +19,4 @@
     width:auto;
     display:inline-block;
     }
+    */
