--- a/templates/requetes/partial.html.twig
+++ b/templates/requetes/partial.html.twig
@@ -6,25 +6,9 @@
                 {#Bouton pour réinitialiser les filtres #}
                 {{ 'generic.clear_filters'|trans }}
             </button>
-            <button class="btn btn-primary" onclick="ajouterFiltre()" type="button"> {{ 'generic.add' |trans }}</button> {# Ajouter une requête #}
-            <br/>
-            <br/>
-        </div>
-    </div>
-{% endblock %}
-
-{% block buttonBar %}
-    <div class="row">
-        <div class="col-12 table-buttons">
-            <button
-                class="btn btn-warning clear-filter-button" onclick="clearFilters()" type="button">
-                {#Bouton pour réinitialiser les filtres #}
-                {{ 'generic.clear_filters'|trans }}
-            </button>
-            <button class="btn btn-info" type="button">{{ 'generic.save' |trans }}</button>
-            <button class="btn btn-primary" onclick="ajouterFiltre()" type="button"> {{ 'generic.add' |trans }}</button> {# Ajouter une requête #}
-            <button class="btn btn-success" type="button"> {{ 'generic.search' |trans }} </button>
-            {#Bouton pour lancer la requête #}
+            <button class="btn btn-primary" onclick="ajouterFiltre()" type="button">
+                {{ 'generic.add' |trans }}</button>
+            {# Ajouter une requête #}
             <br/>
             <br/>
         </div>
@@ -32,13 +16,29 @@
 {% endblock %}
 
 {% block buttonGeneric %}
-<div class="row">
+    <div class="row">
         <div class="col-12 table-buttons">
-            <button class="btn btn-info" type="button">{{ 'generic.save' |trans }}</button>
-            <button class="btn btn-success" type="button"> {{ 'generic.search' |trans }} </button>
+            <button class="btn btn-info" onclick="sauvegarderRequete()" type="button">{{ 'generic.save' |trans }}</button>
+            {#Bouton pour sauvegarder la requête #}
+            <button class="btn btn-success" type="button">
+                {{ 'generic.search' |trans }}
+            </button>
             {#Bouton pour lancer la requête #}
             <br/>
             <br/>
         </div>
+    </div>
+{% endblock %}
+
+{% block buttonAndOr %}
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+            <input autocomplete="off" checked id="option1" name="options" type="radio">
+            {{ 'requetes.et' |trans }}
+        </label>
+        <label class="btn btn-secondary">
+            <input autocomplete="off" id="option2" name="options" type="radio">
+            {{ 'requetes.ou' |trans }}
+        </label>
     </div>
 {% endblock %}
